force-app/main/default/objects/int_Budget__c/int_Budget__c.object-meta.xml
<CustomObject>
    <label>int_Budget</label>
    <nameField>
        <label>Nom de int_Budget</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>int_Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>