force-app/main/default/objects/int_Budget__c/fields/Avenant__c.field-meta.xml
<CustomField>
    <fullName>Avenant__c</fullName>
    <label>Avenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>