force-app/main/default/objects/int_Budget__c/fields/codeAffaire__c.field-meta.xml
<CustomField>
    <fullName>codeAffaire__c</fullName>
    <label>codeAffaire</label>
    <length>32</length>
    <type>Text</type>
</CustomField>