force-app/main/default/objects/int_Budget__c/fields/codeCentre__c.field-meta.xml
<CustomField>
    <fullName>codeCentre__c</fullName>
    <label>codeCentre</label>
    <length>3</length>
    <type>Text</type>
</CustomField>