force-app/main/default/objects/int_Budget__c/fields/codeChapitre__c.field-meta.xml
<CustomField>
    <fullName>codeChapitre__c</fullName>
    <label>codeChapitre</label>
    <length>2</length>
    <type>Text</type>
</CustomField>