force-app/main/default/objects/int_Budget__c/fields/codeSousChapitre__c.field-meta.xml
<CustomField>
    <fullName>codeSousChapitre__c</fullName>
    <label>codeSousChapitre</label>
    <length>2</length>
    <type>Text</type>
</CustomField>