force-app/main/default/objects/int_Budget__c/fields/DatePublication__c.field-meta.xml
<CustomField>
    <fullName>DatePublication__c</fullName>
    <label>DatePublication</label>
    <type>Date</type>
</CustomField>