force-app/main/default/objects/int_Budget__c/fields/mntEur__c.field-meta.xml
<CustomField>
    <fullName>mntEur__c</fullName>
    <label>mntEur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>