force-app/main/default/objects/int_Budget__c/fields/nbrHeures__c.field-meta.xml
<CustomField>
    <fullName>nbrHeures__c</fullName>
    <label>nbrHeures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>