force-app/main/default/objects/int_Budget__c/fields/typeDepense__c.field-meta.xml
<CustomField>
    <fullName>typeDepense__c</fullName>
    <label>typeDepense</label>
    <length>3</length>
    <type>Text</type>
</CustomField>